--- a/src/app/components/container/container.component.css
+++ b/src/app/components/container/container.component.css
@@ -1,16 +1,13 @@
-.container-task {
-    height: 250px;
-    width: 550px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 5px;
-    margin: 90px 650px;
-    padding-left: 20px;
-    padding-right: 20px;
+.header {
+    height: 80px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(122, 178, 211);
+    color: rgb(242, 239, 231);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.title {
-    font-size: 35px;
+.text {
 }
