--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,4 +1,3 @@
-<div class="container-task">
-    <h2 class="title">Tarefas</h2>
-    <app-button></app-button>
+<div class="header">
+    <h1 class="text">Lista de contatos</h1>
 </div>
