--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,10 +1,10 @@
-.container-contact  {
+.container-contact {
     margin: 10px 10px;
 }
 
 .contato {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: space-between;
     width: 100%;
     padding: 5px 0;
@@ -24,7 +24,7 @@
     justify-content: space-between;
     margin: 0;
     padding: 0;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 .contato ul li {
@@ -38,5 +38,32 @@
 }
 
 .container-contact {
-    margin: 100px; /* Diminui o espaçamento geral do container */
+    margin: 100px;
 }
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    width: 300px;
+    text-align: center;
+  }
+  
+  .botoes {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  button {
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
