--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<app-container>
-   
-    
-</app-container>
-
-<app-form></app-form>
-
-<app-contact></app-contact>
+<router-outlet></router-outlet>
