--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,6 @@
+<app-container></app-container>
+
+<app-form></app-form>
 <div class="container-contact">
     @for (contact of contatos; track contact.id) {
     <section class="contato">
